--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "chai": "^4.3.0",
+    "mocha": "^8.3.0",
     "nodemon": "^1.18.7"
   }
 }
